--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="DE">
 	<head>
 		<title>Twenty by HTML5 UP</title>
 		<meta charset="utf-8" />
@@ -57,16 +57,22 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>REBECCA ♥ Max</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
+						<p>Dies ist das Familienduellquiz für
 						<br />
-						responsive template
+						die Hochzeit von Rebecca und Max
 						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						am 03. Juni 2023.</p>
+
 						<footer>
 							<ul class="buttons stacked">
-								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+								<li><a href="#question1" class="button fit scrolly">Teilnehmen!</a></li>
+							</ul>
+						</footer>
+						<footer>
+							<ul class="buttons stacked">
+								<li><a href="#main" class="button fit scrolly">Mehr Infos</a></li>
 							</ul>
 						</footer>
 
@@ -75,186 +81,102 @@
 				</section>
 
 			<!-- Main -->
-				<article id="main">
+				<article id="main" style="background-color:#83d3c9; color:white">
 
 					<header class="special container">
 						<span class="icon solid fa-chart-bar"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+						<h2>So funktioniert das Familienduell:</h2>
+						<p>
+							Euch werden gleich 10 Fragen gestellt, die einen direkten Bezug zum Brautpaar haben.
+							Dabei sollt ihr so antworten, wie ihr die beiden einschätzt.
+							Die Antworten werden von uns ausgewertet.
+							Das Brautpaar bekommt sie dann als Fragen gestellt nach dem Schema:
+							<br />
+							"Wir haben die Hochzeitsgesellschaft gefragt, was eure liebste Freizeitbeschäftigung ist.
+							Was waren die häufigsten Antworten?"
+						</p>
 						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
-						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
-						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						<ul class="buttons stacked">
+							<li><a href="#question1" class="button fit scrolly">Teilnehmen!</a></li>
+						</ul>
 					</header>
+				</article>
 
-					<!-- One -->
-						<section class="wrapper style2 container special-alt">
-							<div class="row gtr-50">
-								<div class="col-8 col-12-narrower">
-
-									<header>
-										<h2>Behold the <strong>icons</strong> that visualize what you’re all about. or just take up space. your call bro.</h2>
-									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
-									<footer>
-										<ul class="buttons">
-											<li><a href="#" class="button">Find Out More</a></li>
-										</ul>
-									</footer>
-
-								</div>
-								<div class="col-4 col-12-narrower imp-narrower">
-
-									<ul class="featured-icons">
-										<li><span class="icon fa-clock"><span class="label">Feature 1</span></span></li>
-										<li><span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span></li>
-										<li><span class="icon solid fa-laptop"><span class="label">Feature 3</span></span></li>
-										<li><span class="icon solid fa-inbox"><span class="label">Feature 4</span></span></li>
-										<li><span class="icon solid fa-lock"><span class="label">Feature 5</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Feature 6</span></span></li>
-									</ul>
-
-								</div>
-							</div>
-						</section>
-
+			<article id="questions">
 					<!-- Two -->
 						<section class="wrapper style1 container special">
 							<div class="row">
 								<div class="col-4 col-12-narrower">
 
-									<section>
+									<section id="question1">
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>This is Something</h3>
+											<h3>Frage 1:</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>
+											Welches Getränk haben die beiden immer zu Hause?
+										</p>
+										<div class="col-12">
+											<input type="text" name="question1" placeholder="Antwort..." />
+										</div>
+										<ul class="buttons stacked">
+											<li><a href="#question2" class="button fit scrolly">Nächste Frage</a></li>
+										</ul>
 									</section>
 
 								</div>
 								<div class="col-4 col-12-narrower">
 
-									<section>
+									<section id="question2">
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>Also Something</h3>
+											<h3>Frage 2:</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>
+											Was machen die beiden in ihrer Freizeit am liebsten zusammen?
+										</p>
+										<div class="col-12">
+											<input type="text" name="question2" placeholder="Antwort..." />
+										</div>
+										<ul class="buttons stacked">
+											<li><a href="#question3" class="button fit scrolly">Nächste Frage</a></li>
+										</ul>
 									</section>
 
 								</div>
 								<div class="col-4 col-12-narrower">
 
-									<section>
+									<section id="question3">
 										<span class="icon solid featured fa-check"></span>
 										<header>
-											<h3>Probably Something</h3>
+											<h3>Frage 3:</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>
+											Blablablubberblubberfasel
+										</p>
+										<div class="col-12">
+											<input type="text" name="question3" placeholder="AHA!" />
+										</div>
+										<ul class="buttons stacked">
+											<li><a href="#question3" class="button fit scrolly">Abschicken</a></li>
+										</ul>
+
 									</section>
 
 								</div>
 							</div>
 						</section>
-
-					<!-- Three -->
-						<section class="wrapper style3 container special">
-
-							<header class="major">
-								<h2>Next look at this <strong>cool stuff</strong></h2>
-							</header>
-
-							<div class="row">
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-										<header>
-											<h3>A Really Fast Train</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
-								</div>
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-										<header>
-											<h3>An Airport Terminal</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Hyperspace Travel</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
-								</div>
-								<div class="col-6 col-12-narrower">
-
-									<section>
-										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-										<header>
-											<h3>And Another Train</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
-									</section>
-
-								</div>
-							</div>
-
-							<footer class="major">
-								<ul class="buttons">
-									<li><a href="#" class="button">See More</a></li>
-								</ul>
-							</footer>
-
-						</section>
-
-				</article>
-
-			<!-- CTA -->
-				<section id="cta">
-
-					<header>
-						<h2>Ready to do <strong>something</strong>?</h2>
-						<p>Proin a ullamcorper elit, et sagittis turpis integer ut fermentum.</p>
-					</header>
-					<footer>
-						<ul class="buttons">
-							<li><a href="#" class="button primary">Take My Money</a></li>
-							<li><a href="#" class="button">LOL Wut</a></li>
-						</ul>
-					</footer>
-
-				</section>
+			</article>
 
 			<!-- Footer -->
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="https://www.github.com/sthagel/familienduell" class="icon brands circle fa-github"><span class="label">Github</span></a></li>
 					</ul>
 
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; 2023 Stephan Hagel & Die Pubcrew</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 				</footer>
