Rework burger menu

--- a/index.html
+++ b/index.html
@@ -20,27 +20,18 @@
 					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">Welcome</a></li>
-							<li class="submenu">
-								<a href="#">Layouts</a>
-								<ul>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li class="submenu">
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Dolore Sed</a></li>
-											<li><a href="#">Consequat</a></li>
-											<li><a href="#">Lorem Magna</a></li>
-											<li><a href="#">Sed Magna</a></li>
-											<li><a href="#">Ipsum Nisl</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="#" class="button primary">Sign Up</a></li>
+							<li class="current"><a href="#banner">Start</a></li>
+							<li class="current"><a href="#main">Erklärung</a></li>
+							<li class="current"><a href="#question1">Frage 1</a></li>
+							<li class="current"><a href="#question2">Frage 2</a></li>
+							<li class="current"><a href="#question3">Frage 3</a></li>
+							<li class="current"><a href="#question4">Frage 5</a></li>
+							<li class="current"><a href="#question5">Frage 5</a></li>
+							<li class="current"><a href="#question6">Frage 6</a></li>
+							<li class="current"><a href="#question7">Frage 7</a></li>
+							<li class="current"><a href="#question8">Frage 8</a></li>
+							<li class="current"><a href="#question9">Frage 9</a></li>
+							<li class="current"><a href="#question10">Frage 10</a></li>
 						</ul>
 					</nav>
 				</header>
