--- a/index.html
+++ b/index.html
@@ -24,16 +24,7 @@
                     <ul>
                         <li class="current"><a href="#banner">Start</a></li>
                         <li class="current"><a href="#main">Erklärung</a></li>
-                        <li class="current"><a href="#question1">Frage 1</a></li>
-                        <li class="current"><a href="#question2">Frage 2</a></li>
-                        <li class="current"><a href="#question3">Frage 3</a></li>
-                        <li class="current"><a href="#question4">Frage 5</a></li>
-                        <li class="current"><a href="#question5">Frage 5</a></li>
-                        <li class="current"><a href="#question6">Frage 6</a></li>
-                        <li class="current"><a href="#question7">Frage 7</a></li>
-                        <li class="current"><a href="#question8">Frage 8</a></li>
-                        <li class="current"><a href="#question9">Frage 9</a></li>
-                        <li class="current"><a href="#question10">Frage 10</a></li>
+                        <li class="current"><a href="#name_form">Zu den Fragen</a></li>
                     </ul>
                 </nav>
             </header>
@@ -60,7 +51,7 @@
 
                     <footer>
                         <ul class="buttons stacked">
-                            <li><a href="#question1" class="button fit scrolly">Teilnehmen!</a></li>
+                            <li><a href="#name_form" class="button fit scrolly">Teilnehmen!</a></li>
                         </ul>
                     </footer>
                     <footer>
@@ -90,7 +81,7 @@
                     </p>
                     <br/>
                     <ul class="buttons stacked">
-                        <li><a href="#question1" class="button fit scrolly">Teilnehmen!</a></li>
+                        <li><a href="#name_form" class="button fit scrolly">Teilnehmen!</a></li>
                     </ul>
                 </header>
             </article>
@@ -99,7 +90,25 @@
                 <!-- Two -->
                 <section class="wrapper style1 container special">
                     <div class="row">
-                        <form>
+                        <form action="submitted.php" method="POST">
+                            <div class="col-4 col-12-narrower">
+
+                                <section id="name_form">
+                                    <span class="icon solid featured fa-check"></span>
+                                    <header>
+                                        <h3>Wie lautet dein Name?</h3>
+                                    </header>
+                                    <div class="col-12">
+                                        <input type="text" name="name" placeholder="Name"/>
+                                    </div>
+                                    <ul class="buttons stacked">
+                                        <li><a href="#question1" class="button fit scrolly">Nächste Frage</a></li>
+                                    </ul>
+                                </section>
+
+                            </div>
+
+
                             <div class="col-4 col-12-narrower">
 
                                 <section id="question1">
