Add questions by the pubcrew

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                         <h3>Frage 1:</h3>
                                     </header>
                                     <p>
-                                        Welches Getränk haben die beiden immer zu Hause?
+                                        Nennen Sie ein alkoholisches Getränk, das Rebecca und Max garantiert zuhause haben.
                                     </p>
                                     <div class="col-12">
                                         <input type="text" name="question1" placeholder="Antwort..."/>
@@ -136,7 +136,7 @@
                                         <h3>Frage 2:</h3>
                                     </header>
                                     <p>
-                                        Was machen die beiden in ihrer Freizeit am liebsten zusammen?
+                                        Nennen Sie ein Gericht, das Rebecca und Max am häufigsten essen?
                                     </p>
                                     <div class="col-12">
                                         <input type="text" name="question2" placeholder="Antwort..."/>
@@ -156,10 +156,10 @@
                                         <h3>Frage 3:</h3>
                                     </header>
                                     <p>
-                                        Blablablubberblubberfasel
+                                        Nennen Sie eine Freizeitbeschäftigung, der Rebecca und Max am liebsten gemeinsam nachgehen.
                                     </p>
                                     <div class="col-12">
-                                        <input type="text" name="question3" placeholder="AHA!"/>
+                                        <input type="text" name="question3" placeholder="Antwort..."/>
                                     </div>
                                     <ul class="buttons stacked">
                                         <li><a href="#question4" class="button fit scrolly">Nächste Frage</a></li>
@@ -177,10 +177,10 @@
                                         <h3>Frage 4:</h3>
                                     </header>
                                     <p>
-                                        Blablablubberblubberfasel
+                                        Nennen Sie das Urlaubsziel, auf das sich Rebecca und Max leicht einigen können. Nennen Sie ein Land.
                                     </p>
                                     <div class="col-12">
-                                        <input type="text" name="question4" placeholder="AHA!"/>
+                                        <input type="text" name="question4" placeholder="Antwort..."/>
                                     </div>
                                     <ul class="buttons stacked">
                                         <li><a href="#question5" class="button fit scrolly">Nächste Frage</a></li>
@@ -197,10 +197,10 @@
                                         <h3>Frage 5:</h3>
                                     </header>
                                     <p>
-                                        Blablablubberblubberfasel
+                                        Nennen Sie eine Aufgabe im Haushalt, die überwiegend Rebecca übernimmt.
                                     </p>
                                     <div class="col-12">
-                                        <input type="text" name="question5" placeholder="AHA!"/>
+                                        <input type="text" name="question5" placeholder="Antwort..."/>
                                     </div>
                                     <ul class="buttons stacked">
                                         <li><a href="#question6" class="button fit scrolly">Nächste Frage</a></li>
@@ -217,10 +217,10 @@
                                         <h3>Frage 6:</h3>
                                     </header>
                                     <p>
-                                        Blablablubberblubberfasel
+                                        Nennen Sie eine Aufgabe im Haushalt, die überwiegend Max übernimmt.
                                     </p>
                                     <div class="col-12">
-                                        <input type="text" name="question6" placeholder="AHA!"/>
+                                        <input type="text" name="question6" placeholder="Antwort..."/>
                                     </div>
                                     <ul class="buttons stacked">
                                         <li><a href="#question7" class="button fit scrolly">Nächste Frage</a></li>
@@ -237,12 +237,12 @@
                                         <h3>Frage 7:</h3>
                                     </header>
                                     <p>
-                                        Blablablubberblubberfasel
+                                        Wie viel Liter Bier trinken Rebecca und Max zusammen pro Jahr?
                                     </p>
                                     <div class="col-12">
-                                        <input type="text" name="question7" placeholder="AHA!"/>
+                                        <input type="text" name="question7" placeholder="Antwort..."/>
                                     </div>
-                                    <ul class="buttons stacked">
+                                    <!--<ul class="buttons stacked">
                                         <li><a href="#question8" class="button fit scrolly">Nächste Frage</a></li>
                                     </ul>
 
@@ -302,7 +302,7 @@
                                     </p>
                                     <div class="col-12">
                                         <input type="text" name="question10" placeholder="AHA!"/>
-                                    </div>
+                                    </div>-->
                                     <div class="col-12">
                                         <ul class="buttons">
                                             <li><input type="submit" class="special" value="Abschicken"/></li>
